--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A script that detects bots and get their data while visiting on your site and generates a report.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"node app.js"
   },
   "keywords": [
     "Detect",
