--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bowser": "^2.10.0",
+    "current-device": "^0.10.1",
     "detect-browser": "^5.1.1",
     "device-detector-js": "^2.2.1",
     "device-type": "^1.0.0",
@@ -35,6 +36,7 @@
     "node-device-detector": "^1.2.5",
     "platform": "^1.3.6",
     "request-ip": "^2.1.3",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "user-agents": "^1.0.559"
   }
 }
